--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "coveralls": "2.11.9",
     "es6-promisify": "4.0.0",
     "eslint": "2.7.0",
+    "eslint-config-pedant": "0.2.0",
     "fs-extra": "0.26.7",
     "nyc": "6.2.1",
     "tempfile": "1.1.1"
