--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "ava": "^0.15.0",
     "babel-eslint": "^6.1.0",
     "coveralls": "^2.11.9",
+    "del": "^2.2.1",
     "es6-promisify": "^4.1.0",
     "eslint": "^3.0.0",
     "eslint-config-pedant": "^0.7.0",
     "fs-extra": "^0.30.0",
     "nyc": "^7.0.0",
+    "output-file": "^1.1.1",
     "tempfile": "^1.1.1"
   },
   "scripts": {
